# tab-mcp

./: .coverage  .env.example  API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVOPS_SUMMARY.md  ENHANCEMENT_REPORT.md  GETTING_STARTED.md  PHASE1_DEPLOYMENT_GUIDE.md  PRODUCT_ROADMAP.md  README.md  SECURITY.md  TESTING_SUMMARY.md  TEST_QUICK_START.md  TUTORIAL_BETTING_BOT.md  TUTORIAL_FORM_ANALYSIS.md  TUTORIAL_ODDS_COMPARISON.md  coverage.xml  pyproject.toml  pytest.ini  requirements-test.txt
.github/workflows/: monitor.yml  release.yml  test.yml
src/hello_server/: server.py
src/tab_mcp/: server.py  server.py.backup
src/tab_mcp/utils/: __init__.py  cache_utils.py  circuit_breaker.py  enhanced_api.py  retry_utils.py
tests/: README.md  conftest.py
tests/integration/: test_real_api.py
tests/performance/: test_performance.py
tests/unit/: test_server_helpers.py
tests/unit/oauth/: test_oauth_tools.py
tests/unit/racing/: test_racing_tools.py
tests/unit/sports/: test_sports_tools.py
