[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "tab-mcp"
version = "0.1.0"
description = "Tabcorp API MCP server with OAuth authentication"
authors = [
    {name = "Tabcorp MCP", email = "mcp@tabcorp.example"}
]

requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.15.0",
    "smithery>=0.4.2",
]

[project.scripts]
dev = "smithery.cli.dev:main" # Run the MCP server in development mode
start = "smithery.cli.start:main" # Run the MCP server in production mode
playground = "smithery.cli.playground:main" # Run server with interactive testing playground

[tool.smithery]
server = "hello_server.server:create_server" # Function that returns a patched FastMCP server
log_level = "warning" # Production log level (optional, defaults to "warning")
